--- a/mifosng-android/src/main/res/layout/fragment_individual_recycler.xml
+++ b/mifosng-android/src/main/res/layout/fragment_individual_recycler.xml
@@ -7,14 +7,15 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="@color/primary">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
-            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorColor="@color/red_app"
+            app:tabTextColor="@color/black"
             app:tabMode="fixed"/>
     </com.google.android.material.appbar.AppBarLayout>
 
