--- a/mifosng-android/src/main/res/layout/checker_inbox_fragment.xml
+++ b/mifosng-android/src/main/res/layout/checker_inbox_fragment.xml
@@ -62,7 +62,8 @@
             android:layout_height="56dp"
             android:layout_marginBottom="8dp"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="2dp"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="10dp"
             app:cardElevation="8dp">
 
             <RelativeLayout
@@ -145,6 +146,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_checker_inbox"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="20dp"/>
 
 </LinearLayout>
