--- a/mifosng-android/src/main/res/layout/item_checker_task.xml
+++ b/mifosng-android/src/main/res/layout/item_checker_task.xml
@@ -10,7 +10,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white">
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -136,18 +143,16 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray_dark" />
-
-
     <LinearLayout
         android:id="@+id/ll_checker_task_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_light"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/fingerprint_button_rounded"
         android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible">
@@ -217,11 +222,6 @@
                 tools:text="24 Jun 2019" />
 
         </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_dark" />
 
     </LinearLayout>
 
