--- a/mifosng-android/src/main/res/layout/fragment_add_loan.xml
+++ b/mifosng-android/src/main/res/layout/fragment_add_loan.xml
@@ -173,6 +173,7 @@
                 android:paddingTop="10dp"
                 android:spinnerMode="dropdown" />
             <View
+                android:id="@+id/v_spLinkingOptions"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/gray_dark"
