--- a/mifosng-android/src/main/res/layout/activity_dashboard.xml
+++ b/mifosng-android/src/main/res/layout/activity_dashboard.xml
@@ -1,29 +1,24 @@
-<androidx.drawerlayout.widget.DrawerLayout
-    android:id="@+id/drawer"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".online.DashboardActivity">
 
-    <LinearLayout
-        style="@style/LinearLayout.Base">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <include layout="@layout/toolbar"/>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Toolbar.Common"
+            android:theme="@style/Toolbar.Common"
+            app:popupTheme="@style/AppToolbarPopup"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-            style="@style/FrameLayout.Container"/>
-
-    </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/view_nav_drawer_header"
-        app:menu="@menu/menu_nav_drawer"
-        />
-</androidx.drawerlayout.widget.DrawerLayout>
+    <FrameLayout style="@style/FrameLayout.Container" />
+</LinearLayout>
