--- a/mifosng-android/src/main/res/layout/row_runreport_list.xml
+++ b/mifosng-android/src/main/res/layout/row_runreport_list.xml
@@ -8,6 +8,7 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/round_no_stroke">
 
 </LinearLayout>
