--- a/mifosng-android/src/main/res/layout/simple_spinner_item.xml
+++ b/mifosng-android/src/main/res/layout/simple_spinner_item.xml
@@ -2,6 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="@color/white"
-    android:textStyle="bold"
-    android:textSize="25sp"/>
+    android:textColor="@color/black"
+    android:textSize="18sp"/>
