--- a/mifosng-android/src/main/res/layout/row_center_list_item.xml
+++ b/mifosng-android/src/main/res/layout/row_center_list_item.xml
@@ -92,6 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:text="@string/small_text"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
